--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": ["src/**/*", "api/index.ts"],
+  "include": ["src/**/*", "index.ts"],
   "exclude": ["node_modules", "dist"],
   "ts-node": {
     "transpileOnly": true,
